syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

//抽奖
message GCHttpBeatProto {
	 optional int32 msgType=1 [default = 2007];//协议类型
	 optional int32 status=2;//状态
	 
}