syntax = "proto2";
package buffer;
message GCPowerGetInfoProto {
	optional int32 msgType = 1 [default = 1073];
	optional int32 status = 2;
	optional int32 power = 3;
	optional int32 updatePowerTime = 4;
	optional int32 infinitePowerEndTime = 5;
}